--- a/style.css
+++ b/style.css
@@ -35,6 +35,23 @@
     font-size: 20px;
 }
 
+.modal_opener{
+    text-align: center;
+    margin-top: 20px;
+}
+#myBtn{
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
 
 #btn{
     background-color: rgb(33, 179, 33);
